Revert "new code coverage for test classes CoCProfile and KVKDataProvider + splitted BAG method in KVKDataProvider"
This reverts commit 2705438064751762e09d417fdebe308216abf86a.

--- a/force-app/main/default/classes/KVKDataProviderV2.cls
+++ b/force-app/main/default/classes/KVKDataProviderV2.cls
@@ -223,24 +223,19 @@ public with sharing class KVKDataProviderV2 implements IDataProvider {
     }
 
     public CoCAddress insertBAGInformationInAddress(CoCAddress cocAddress, String bagId) {
-        HttpResponse resp = this.getResponseBAGCallout(bagId);
+        Http http = new Http();
+        HttpResponse resp = http.send(createRequest(endpoint, environment, 'address', '?bagId=' + bagId));
         String body = resp.getBody();
+
         BAGResponse parsedResp = (BAGResponse) JSON.deserialize(body.replace('_embedded', 'embedded'), BAGResponse.class);
+
         if (parsedResp.embedded != null && parsedResp.embedded.adressen.size() > 0) {
             BAGAddress bagAddress = parsedResp.embedded.adressen.get(0);
             if (bagAddress.woonplaatsNaam != null) {
-            cocAddress.city = bagAddress.woonplaatsNaam;
+                cocAddress.city = bagAddress.woonplaatsNaam;
             }
         }
         return cocAddress;
-    }
-
-    public HttpResponse getResponseBAGCallout(String bagId) {
-        HttpRequest req = createRequest(endpoint, environment, 'address', '?bagId=' + bagId);
-        Http http = new Http();
-        HttpResponse resp = http.send(req);
-        
-        return resp;
     }
 
     private HttpRequest createRequest(String endpoint, String environment, String method, String query) {
